# ChurnGuard

./: .gitignore  Dockerfile  README.md  app.py  mlflow 2.db  pyproject.toml  requirements.txt
mlruns/0/: meta.yaml
mlruns/506424314219050395/: meta.yaml
mlruns/506424314219050395/15dff46dd54e43f4b0993f5165c60ad1/: meta.yaml
mlruns/506424314219050395/1bc9d8c3252c4d55b4ad335e17ed6465/: meta.yaml
mlruns/506424314219050395/2340c9854f234003b6828ab4283fb87d/: meta.yaml
mlruns/506424314219050395/32286a138ca146afa01b23a58cd7831a/: meta.yaml
mlruns/506424314219050395/3d4f72cea2c649a5b430fde677478f51/: meta.yaml
mlruns/506424314219050395/68f680200ce34e11bc2bc09ca1096a78/: meta.yaml
mlruns/506424314219050395/723bea40a0b44795b5796a06642500d6/: meta.yaml
mlruns/506424314219050395/90c300e6999c48d6b96b5a79bd4f20c4/: meta.yaml
mlruns/506424314219050395/a54c902629274bbfb67d8cd48b3f7414/: meta.yaml
mlruns/506424314219050395/b85dd88e8c6f44e196327b16543d55c3/: meta.yaml
mlruns/506424314219050395/ca0c95f7f7b242b69da2246ea3a9645e/: meta.yaml
mlruns/506424314219050395/f81c9550727f465cbb5e5c1adcb62937/: meta.yaml
mlruns/786794398997385607/: meta.yaml
mlruns/786794398997385607/22659eb3b5ed4ddeb7a6082a25e8dc35/: meta.yaml
mlruns/975548083728834980/: meta.yaml
mlruns/975548083728834980/6d5460ff9c9c4f808f4d220795172dc8/: meta.yaml
mlruns/975548083728834980/817126f83d3f4fcb82214ef3bb7371e1/: meta.yaml
notebooks/: 01_eda.ipynb  01_eda_messy.ipynb  02_model_improvement.ipynb  churnguard.ipynb  mlflow.db
old_notebooks/: 01_eda.ipynb
(+161 files in other folders)
